# owlette

./: .firebaserc  .gitignore  .vercelignore  404.html  README.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  mkdocs.yml  package-lock.json  package.json  roadmap.md  sitemap.xml  storage.rules
.claude/: .env.example  CLAUDE.md  VERSION-MANAGEMENT.md  recovery-check.sh  settings.json
agent/: CLAUDE.md  INSTALLER-USAGE.md  README.md  build_installer_full.bat  build_installer_quick.bat  config.example.json  index.html  owlette_installer.iss  requirements.txt  uninstall.bat
api-test/: .env.test.example  pytest.ini
architecture/: index.html
changelog/: index.html
cli/: LICENSE  (+6 more)
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/examples/: auth_inventory.py  auto_rollback.py  bulk_create.py  ci_cd.py  command_poll.py  nightly_sync.py  run_roost_workflow.py  webhook_verify.py
sdks/python/roost/: __init__.py  _chunker.py  _version.py  client.py  signature.py
sdks/python/roost/resources/: __init__.py  account.py  chat.py  chunks.py  deployments.py  installer.py  installer_deployments.py  keys.py  machines.py  manifests.py  members.py  processes.py  quotas.py  roosts.py  sites.py  users.py  versions.py  webhooks.py
sdks/python/tests/: test_account.py  test_chat.py  test_chunker.py  test_client.py  test_installer.py  test_installer_deployments.py  test_machines_commands.py  test_members.py  test_processes.py  test_public_api_pagination.py  test_quotas.py  test_signature.py  test_smoke.py  test_users.py  test_webhooks.py
(+1686 files in other folders)
