[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "owlette-sdk"
version = "0.2.0"
description = "Python SDK for the owlette public API (owlette.app)"
readme = "README.md"
license = { text = "FSL-1.1-Apache-2.0" }
authors = [{ name = "Owlette" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.11",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://owlette.app"

[tool.hatch.build.targets.sdist]
include = ["roost/**", "examples/run_roost_workflow.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["roost"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["roost"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
